--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/Aguevarab0729/bog001-md-links#readme",
   "dependencies": {
     "marked": "^1.2.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "yargs": "^16.1.0"
   },
   "devDependencies": {}
 }
